===============================================================================
Change history for bound-states project
===============================================================================

DONE:
5/20/08 - replace Font with PhetFont throughout
********* version 1.04.00 (21058)
********* version 1.03.03 (21046)
4/28/08 - reduce vertical spacing between sub-control panels to zero
********* version 1.03.02 (21022)
4/28/08 - pick up fix to PhetDefaultFont so we use "Ludica Sans" plain 12pt on all platforms
********* version 1.03.01 (21013)
4/28/08 - pick up fix to PhetDefaultFont so that preferred fonts are derived properly
4/28/08 - pick up fix to PhetDefaultFont so we use JPanel.getFont on all platforms
4/28/08 - republish dev version to confirm that this fixes translations [#534]
12/21/07 - delete BSLauncher and associated localized strings, replaced by phetcommon FlavorLauncher
12/4/07 - rename main classes to be consistent with flavor names
11/12/07 - fix property names for Spanish translation of covalent-bonds and band-structure flavors
11/9/07 - move about.credits property to localization file
10/29/07 - Sam Reid fixed bug in Spanish translation of bound-states.description
10/9/07 - migrate "Reset All" and "set minimum width" features to phetcommon ControlPanel
10/9/07 - switch persistence to phetcommon's XMLPersistenceManager
8/29/07 - replace BSWiggleMe with piccolo-phet DefaultWiggleMe
8/27/07 - replace "Lucida Sans" with PhetDefaultFont.getDefaultFontName()
8/16/07 - convert persistence code to use IProguardKeepInterface instead of BSSerializable
8/16/07 - bugfix: after loading a config, drag handles are no longer attached to well shapes
********* version 1.03.00 (17033)
7/27/07 - new version published as part of new website deployment
7/10/07 - fix load/save so that it doesn't change the clock's run state unless it's for the active module
7/10/07 - fix modules so that they don't explicty start the clock